Mejorando la lib
Se añade posibilidad de usar como bundle.
Se añade mejora en la doc.
Se añade soporte de traduccion de entidades

--- a/services.yaml
+++ b/services.yaml
@@ -5,3 +5,8 @@ services:
 
     Optime\Util\:
         resource: './'
+
+    Optime\Util\Translation\DefaultLocalesProvider:
+        arguments:
+            - "%kernel.default_locale%"
+            - "@=container.hasParameter('optime.sf_utils.locales') ? container.getParameter('optime.sf_utils.locales') : null"
