Ajustando security.yaml

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -4,7 +4,7 @@ services:
         autoconfigure: true
 
     Optime\Util\:
-        resource: './'
+        resource: '../../'
 
     Optime\Util\Translation\DefaultLocalesProvider:
         arguments:
