--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "optimeconsulting/sf-utils",
   "require": {
     "php": "^8.1",
-    "symfony/framework-bundle": "^5.2|^6.0"
+    "symfony/framework-bundle": "^5.2|^6.0",
+    "symfony/uid": "^5.0|^6.0"
   },
   "autoload": {
     "psr-4": {
