--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,9 @@
     "psr-4": {
       "Optime\\Util\\": "src/"
     }
+  },
+  "suggest": {
+    "phpoffice/phpspreadsheet": "^1.0|^2.0",
+    "stof/doctrine-extensions-bundle": "^1.7"
   }
 }
